# fsmEngine

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
fsmExamples/argoUml/: CSM_testConfig_1.xmi  CSM_testConfig_2.xmi
fsmExamples/puml/: exampleFSM.puml  internalTransition.puml  transitionsWithActions.puml  transitionsWithActionsAndConditions.puml
src/: CAction.cpp  CAction.h  CActionFactory.cpp  CActionFactory.h  CArgoConfigurator.cpp  CArgoConfigurator.h  CFastHash.cpp  CFastHash.h  CGenericAction.h  CGenericCondition.h  CLambdaAction.cpp  CLambdaAction.h  CLambdaCondition.cpp  CLambdaCondition.h  CMakeLists.txt  CPUMLConfigurator.cpp  CPUMLConfigurator.h  CState.cpp  CState.h  CStateMachine.cpp  CStateMachine.h  CTransition.cpp  CTransition.h  IAction.h  IActionFactory.h  ICSMBuilder.h  ICSMConfigurator.h  ICondition.h  IFSMBuilder.h  IFSMConfigurator.h
test/: CCSMBuilderMock.h  CMakeLists.txt  ITestInterface.h  Test_CActionFactory.cpp  Test_CArgoConfigurator.cpp  Test_CPUMLConfigurator.cpp  Test_CState.cpp  Test_CStateMachine.cpp  Test_CStateMachineWpuml.cpp  Test_LambdaEffectors.cpp
